--- a/1 - drumKit/index-START.html
+++ b/1 - drumKit/index-START.html
@@ -58,10 +58,19 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function)
+  window.addEventListener('keydown', function(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    if(!audio) return; // stops function from running    
+    console.log(e.keyCode)
+    audio.play();
+  });
 
 </script>
 
 
 </body>
 </html>
+
+
+
+
