add animations on press

--- a/1 - drumKit/index-START.html
+++ b/1 - drumKit/index-START.html
@@ -60,9 +60,12 @@
 <script>
   window.addEventListener('keydown', function(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    if(!audio) return; // stops function from running    
-    console.log(e.keyCode)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    if(!audio) return; //stops function from running    
+    // console.log(e.keyCode)
+    audio.currentTime = 0; //rewind to start instead of playing full sound
     audio.play();
+    key.classList.add('playing');
   });
 
 </script>
