--- a/1 - drumKit/index-START.html
+++ b/1 - drumKit/index-START.html
@@ -66,7 +66,18 @@
     audio.currentTime = 0; //rewind to start instead of playing full sound
     audio.play();
     key.classList.add('playing');
+
   });
+
+  function removeTransition(e){
+    if(e.propertyName !== 'transform')
+      return; // skip if not a transform
+    this.classList.remove('playing');
+    console.log(e.propertyName);
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
 
 </script>
 
