--- a/1 - drumKit/index-START.html
+++ b/1 - drumKit/index-START.html
@@ -58,26 +58,29 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
+  
+
+  function playSound(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
     if(!audio) return; //stops function from running    
-    // console.log(e.keyCode)
+      // console.log(e.keyCode)
     audio.currentTime = 0; //rewind to start instead of playing full sound
     audio.play();
     key.classList.add('playing');
-
-  });
+    };
 
   function removeTransition(e){
     if(e.propertyName !== 'transform')
       return; // skip if not a transform
     this.classList.remove('playing');
     console.log(e.propertyName);
-  }
+  };
 
   const keys = document.querySelectorAll('.key');
   keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+
+  window.addEventListener('keydown', playSound);
 
 </script>
 
