--- a/2- cssJsClock/index.html
+++ b/2- cssJsClock/index.html
@@ -65,7 +65,7 @@
       transform-origin: 100%;
       transform: rotate(90deg);
       transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0, 3.78, 0.39, 0.81);
+      transition-timing-function: cubic-bezier(0, 3.78, 0.39, 0.81)  ;
 
     }
 
@@ -73,6 +73,17 @@
 
   <script>
 
+    const secondHand = document.querySelector('.second-hand');
+
+    function setDate(){
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = (seconds / 60) * 360; 
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      console.log(seconds) 
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
